// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree should rebuild in a stable order (change after) 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,6 +3,12 @@
      "children": Array [],
      "component": "one",
      "path": "one",
      "props": false,
    },
+   Object {
+     "children": Array [],
+     "component": "b.two",
+     "path": "b.two",
+     "props": false,
+   },
  ]
`;

exports[`xstate-component-tree should rebuild in a stable order (change before) 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,6 +3,12 @@
      "children": Array [],
      "component": "one",
      "path": "one",
      "props": false,
    },
+   Object {
+     "children": Array [],
+     "component": "b.two",
+     "path": "b.two",
+     "props": false,
+   },
  ]
`;

exports[`xstate-component-tree should rebuild on machine transition 1`] = `
Snapshot Diff:
- First value
+ Second value

  Array [
    Object {
      "children": Array [],
-     "component": "one",
-     "path": "one",
+     "component": "two",
+     "path": "two",
      "props": false,
    },
  ]
`;

exports[`xstate-component-tree should return a tree of components 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "two",
        "path": "one.two",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support arbitrary ids 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "two",
        "path": "one.two",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support holes 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "three",
        "path": "one.two.three",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support nested parallel states (stable: false) 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "two",
    "path": "one.two",
    "props": false,
  },
  Object {
    "children": Array [],
    "component": "three",
    "path": "one.three",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support nested parallel states (stable: true) 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "three",
    "path": "one.three",
    "props": false,
  },
  Object {
    "children": Array [],
    "component": "two",
    "path": "one.two",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support parallel states 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": false,
  },
  Object {
    "children": Array [],
    "component": "two",
    "path": "two",
    "props": false,
  },
]
`;
